Kubernetes/Dev/Manifests/Ingress/urlFrontendIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: urlshortenerapp
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - my-nginx-page.com
      secretName: urlfrontendingresssecret
  rules:
    - host: my-nginx-page.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: urlfrontendservice
              port:
                number: 80
